--- a/package.json
+++ b/package.json
@@ -9,26 +9,31 @@
     "test": "jest",
     "test:watch": "jest --watch"
   },
-  "keywords": ["privacy", "security", "gmail", "policy-analysis"],
+  "keywords": [
+    "privacy",
+    "security",
+    "gmail",
+    "policy-analysis"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "express-validator": "^7.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "bcryptjs": "^2.4.3",
     "axios": "^1.5.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.0",
     "googleapis": "^118.0.0",
-    "openai": "^4.17.0",
-    "crypto-js": "^4.1.1"
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^7.5.0",
+    "openai": "^4.104.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   }
 }
